--- a/html/main_html.html
+++ b/html/main_html.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+   <script src="../javascript/sample_functions.js"></script>
+</head>
 <div id="main_bucket">
-    
+
 </div>
+</html>
